2009-03-31  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance CFSQP bridge.
	* src/cfsqp.cc: Fix constraint handling.
	* src/cfsqp.hh: Add bounds initializing method.

2009-03-30  Thomas Moulard  <thomas.moulard@gmail.com>

	Add rough implementation of a CFSQP bridge.
	* TODO: Add items.
	* src/Makefile.am: Link against CFSQP.
	* src/cfsqp.cc: Implement the bridge.

2009-03-30  Thomas Moulard  <thomas.moulard@gmail.com>

	Add CFSQP solver.
	* src/Makefile.am: Compile CFSQPSolver class, distribute header.
	* src/cfsqp.cc: Copy from src/optimization-fwd.hh.
	* src/cfsqp.hh: Copy from src/optimization-fwd.hh.
	* src/optimization-fwd.hh: Predeclare CFSQPSolver.
	* tests/Makefile.am: Add CFSQP test.
	* tests/cfsqp.at: Add CFSQP test (tag as xfail for now).
	* tests/cfsqp.cc: Copy from tests/ipopt.cc.
	* tests/cfsqp.stdout: New.
	* tests/ipopt.cc: Remove explicit use of IpoptSolver.
	* tests/testsuite.at: Include CFSQP test.

2009-03-30  Thomas Moulard  <thomas.moulard@gmail.com>

	Clean package, debug Ipopt.
	* src/Makefile.am: Add missing distributed headers.
	* src/doc.hh: Document (draft of the main page).
	* src/dummy.cc: Describe returned errors.
	* src/dummy.hh: Add default params to constructors.
	* src/ipopt.cc: Clean, debug implementation.
	* src/ipopt.hh: Add default params to constructor.
	* src/solver.hh: Add default parameters to constructor
        and allows access to internal Ipopt application.
	* tests/ipopt.cc: Debug and clean, make stricter.
	* tests/ipopt.stdout: Put definitive output.
	* tests/simple-test.cc: Do not pass useless parameters.

2009-03-30  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix hessian matrix.
	* tests/ipopt.cc: Fix hessian matrix (symmetric).

2009-03-30  Thomas Moulard  <thomas.moulard@gmail.com>

	Add Hessian/Jacobian handling.
	* src/dummy.cc,
	* src/dummy.hh: Do not use Hessian, Jacobian with Dummy.
	* src/ipopt.cc,
	* src/ipopt.hh: Pass Hessian and Jacobian to Ipopt.
	* src/solver.cc,